    six directories on the Z drive by default, namely
    4DOS, BIN, DEBUG, DOS, SYSTEM, TEXTUTIL. Most files
    that previously appeared on the root directory of
    Z drive are now categorized into directories, with
    addition of some files/programs, such as additional
    4DOS files, text utilties in TEXTUTIL directory and
    TITLE command to change window title. (Wengier)
  - The return value of AL in Int21/AX=0Eh is no longer
    fixed. The game Jurassic Park may run after moving
    Z drive to a different letter (e.g. E:). (Wengier)
  - Added "Change current CD image..." menu option to
    change the currently active ISO/CUE image(s) on CD
    drives. This makes it possible to change active CD
    images while guest systems are running. (Wengier)
  - Added "Restart DOSBox-X with config file..." menu
    option to start DOSBox-X with the specified config
    file automatically from the menu. (Wengier)
  - Added "Refresh rate..." menu option (under "Video")
    to set the video refresh rate. (Wengier)
  - Added "Enable A20 gate" menu option (under "DOS")
    to enable or disable the A20 gate. (Wengier)
  - Added "maximize" config option in [sdl] section to
    automatically maximize the DOSBox-X window at start
    (SDL2 and Windows SDL1 builds only). (Wengier)
  - Added "debuggerrun" config option in [log] section
    to set the run mode when DOSBox-X Debugger starts.
    You can now also switch them from the menu ("Help"
    => "Debugging options" => "Debugger option: ..."),
    including "debugger", "normal" & "watch". Also, the
    built-in DEBUGBOX command without a parameter will
    start the DOSBox-X debugger. (Wengier)
  - Added menu options "Generate NMI interrupt" & "Hook
    INT 2Fh calls" ("Help" => "Debugging options") for
    more debugging options. (Wengier)
  - Fixed issues related to screen dimensions in TTF
    output in CGA/EGA modes since 0.83.12. (Wengier)
  - Integrated SVN commits (Allofich)