@@ -97,7 +97,7 @@ typedef std::list<std::string>::iterator auto_it;
 void VFILE_Remove(const char *name,const char *dir="");
 
 #if defined(WIN32)
-void MountAllDrives(Program * program) {
+void MountAllDrives(Program * program, bool quiet) {
     uint32_t drives = GetLogicalDrives();
     char name[4]="A:\\";
     for (int i=0; i<25; i++) {
@@ -106,7 +106,7 @@ void MountAllDrives(Program * program) {
             name[0]='A'+i;
             int type=GetDriveType(name);
             if (type!=DRIVE_NO_ROOT_DIR) {
-                program->WriteOut("Mounting %c: => %s..\n", name[0], name);
+                if (!quiet) program->WriteOut("Mounting %c: => %s..\n", name[0], name);
                 char mountstring[DOS_PATHLENGTH+CROSS_LEN+20];
                 name[2]=' ';
                 strcpy(mountstring,name);
@@ -114,8 +114,8 @@ void MountAllDrives(Program * program) {
                 strcat(mountstring,name);
                 strcat(mountstring," -Q");
                 runMount(mountstring);
-                if (!Drives[i]) program->WriteOut("Drive %c: failed to mount.\n",name[0]);
-                else if(mountwarning && type==DRIVE_FIXED && (strcasecmp(name,"C:\\")==0)) program->WriteOut(MSG_Get("PROGRAM_MOUNT_WARNING_WIN"));
+                if (!Drives[i] && !quiet) program->WriteOut("Drive %c: failed to mount.\n",name[0]);
+                else if(mountwarning && !quiet && type==DRIVE_FIXED && (strcasecmp(name,"C:\\")==0)) program->WriteOut(MSG_Get("PROGRAM_MOUNT_WARNING_WIN"));
             }
         }
     }
@@ -686,7 +686,7 @@ void DOS_Shell::Run(void) {
 		if (!control->opt_securemode&&!control->SecureMode())
 		{
 			const Section_prop* sec = 0; sec = static_cast<Section_prop*>(control->GetSection("dos"));
-			if (sec->Get_bool("automountall")) MountAllDrives(this);
+			if (sec->Get_bool("automountall")) MountAllDrives(this, control->opt_fastlaunch);
 		}
 #endif
 		strcpy(i4dos_data, "");
