@@ -10,6 +10,8 @@
     addition of some files/programs, such as additional
     4DOS files, text utilties in TEXTUTIL directory and
     TITLE command to change window title. (Wengier)
+  - Command-line option -fastlaunch will now suppress
+    messages by "automountall=true" option. (Wengier)
   - The return value of AL in Int21/AX=0Eh is no longer
     fixed. The game Jurassic Park may run after moving
     Z drive to a different letter (e.g. E:). (Wengier)
